--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=studio-booking-backend
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/studio_booking?createDatabaseIfNotExist=true&serverTimezone=UTC
+# spring.datasource.url=jdbc:mysql://localhost:3306/studio_booking?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://root:IHhFNUfyvtNiwPZGheFePNnavXkizruA@mysql.railway.internal:3306/studio_nest?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=12345678
+# spring.datasource.password=12345678
+spring.datasource.password=IHhFNUfyvtNiwPZGheFePNnavXkizruA
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
