--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=studio-booking-backend
 
 # Database Configuration
 # spring.datasource.url=jdbc:mysql://localhost:3306/studio_booking?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/studio_nest?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://caboose.proxy.rlwy.net:50837/railway?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 # spring.datasource.password=12345678
 spring.datasource.password=IHhFNUfyvtNiwPZGheFePNnavXkizruA
